Dashboard tuning (#392)
* WIP

* Update accounts endpoint to return just Accounts, not in paginationDto

* Update dashboard with new blocks

* Delete old balance graph

* Update dashboard look

* Fix lint errors

* Update tests
